syntax = "proto3";

package midas;

option java_multiple_files = true;
option java_package = "midas.api"; //Must use underscores (no dashes)!
option go_package="github.com/preeti-kansal-24/MidasLab";

import "google/api/annotations.proto";


service OtpService {
  rpc GenerateOtp(GenerateOtpReq) returns (GenerateOtpResp){
    option (google.api.http) = {
      post: "/midas.api/GenerateOtp"
    };
  }
}

message GenerateOtpReq{
  string phone_number = 1; //@gotags: validate:"required"
}

message GenerateOtpResp{
  string phone_number = 1;
  string otp = 2;
}




